--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -81,7 +81,7 @@
 
 @media screen and (min-width: 1280px) {
   .nav {
-    border-radius: 5rem;
+    border-radius:5rem;
   }
 }
 
@@ -98,11 +98,12 @@
 
   .nav {
     z-index: 8;
-    height: 7rem;
+    height: 4rem;
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 150px;
+    /* justify-content: center; */
+    width: 100px;
     overflow: hidden;
     transition:
       width 0.6s,
