--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,8 @@
   background-color: #15803D;
   color: #ffffff;
 }
-/* Ensure this CSS file is imported AFTER 'react-toastify/dist/ReactToastify.css' */
+
+/* Toastify */
 
 /* Target the main container that holds all toasts */
 .Toastify__toast-container {
@@ -97,4 +98,71 @@
         padding: 15px;
         font-size: 0.9em; /* Smaller font for text content */
     }
+}
+
+/* loading progress bar */
+.progrss_bar_loader {
+  position: relative;
+  width: 120px;
+  height: 90px;
+  margin: 0 auto;
+}
+
+.progrss_bar_loader:before {
+  content: "";
+  position: absolute;
+  bottom: 30px;
+  left: 50px;
+  height: 30px;
+  width: 30px;
+  border-radius: 50%;
+  /* background: #2a9d8f; */
+  background: #15803D;
+  animation: loading-bounce 0.5s ease-in-out infinite alternate;
+}
+
+.progrss_bar_loader:after {
+  content: "";
+  position: absolute;
+  right: 0;
+  top: 0;
+  height: 7px;
+  width: 45px;
+  border-radius: 4px;
+  box-shadow: 0 5px 0 #000000, -35px 50px 0 #000000, -70px 95px 0 #000000;
+  animation: loading-step 1s ease-in-out infinite;
+}
+
+@keyframes loading-bounce {
+  0% {
+    transform: scale(1, 0.7);
+  }
+
+  40% {
+    transform: scale(0.8, 1.2);
+  }
+
+  60% {
+    transform: scale(1, 1);
+  }
+
+  100% {
+    bottom: 140px;
+  }
+}
+
+@keyframes loading-step {
+  0% {
+    box-shadow: 0 10px 0 rgba(0, 0, 0, 0),
+            0 10px 0 #000000,
+            -35px 50px 0 #000000,
+            -70px 90px 0 #000000;
+  }
+
+  100% {
+    box-shadow: 0 10px 0 #000
+            -35px 50px 0 #000000,
+            -70px 90px 0 #000000,
+            -70px 90px 0 #000000;
+  }
 }
